# WT_Extract

./: m24a_cursor_fragen.md  m24b_2_finaler_schliff.md  m24b_3_final_review.md  m24b_architektur_skizze.md  m24b_review_fuer_cursor.md  m24c_cursor_plan_prompt.md  pyproject.toml  ruleset.md
apps/: atlas_demo.py  chunk_world_demo.py  gpu_clear_demo.py  instance_demo.py  ortho_camera_demo.py  tile_layer_demo.py  world_gen_debug_demo.py
bridge/: __init__.py  character_extractor.py  chunk_extractor.py  decoration_extractor.py  dependency_rules.py  screen_to_world.py  sprite_resolve.py  visibility.py
docs/: ARCHITECTURE.md
game_core/: __init__.py  biomes.py  character.py  chunk_build.py  chunk_build_guards.py  chunk_delta.py  chunk_gen_pool.py  chunk_stage.py  chunk_streaming.py  collision_catalog.py  collision_grid.py  content_registry.py  deco_generation.py  decorations.py  field_cache_lru.py  navigation.py  noise.py  paint_brushes.py  pending_unload.py  persistenz.py  region_codec.py  stream_view.py  streaming_config.py  streaming_world_io.py  terrain_gen_profile.py  tile_ids.py  visibility_lod_config.py  worker_content_snapshot.py  worker_fast_path.py  world.py  world_coords.py  world_gen.py  world_gen_context.py  world_gen_parallel.py  world_gen_result.py  world_io.py
helpers/: __init__.py  m24a_predicates.py  m24a_scan.py  m24a_scan_report.json
milestones_detailed/: world-gen.md
render_core/: __init__.py  buffer.py  device.py  errors.py  frame_sync.py  gpu_renderer.py  gpu_timing.py  instance.py  policy.py  render_pass.py  staging.py  surface.py  swapchain.py  (+3 more)
(+343 files in other folders)
